force-app/main/default/objects/Alerta__c/Alerta__c.object-meta.xml
<CustomObject>
    <label>Alerta</label>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Nombre de Alerta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alertas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>