force-app/main/default/objects/Alerta__c/fields/codigo_verificacion__c.field-meta.xml
<CustomField>
    <fullName>codigo_verificacion__c</fullName>
    <label>código verificación</label>
    <length>254</length>
    <type>Text</type>
</CustomField>