force-app/main/default/objects/Alerta__c/fields/Fecha_Creaci_n_5_dias__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Creaci_n_5_dias__c</fullName>
    <formula>IF( LEN(TEXT(DAY(DATEVALUE(CreatedDate) + 5)))&gt;1 ,TEXT(DAY(DATEVALUE(CreatedDate) + 5)),&quot;0&quot; + TEXT(DAY(DATEVALUE(CreatedDate) + 5)))+
&quot;/&quot; +
IF( LEN(TEXT(MONTH(DATEVALUE(CreatedDate) + 5)))&gt;1 ,TEXT(MONTH(DATEVALUE(CreatedDate) + 5)),&quot;0&quot; +TEXT( MONTH(DATEVALUE(CreatedDate) + 5)))+
&quot;/&quot;+
TEXT(YEAR(DATEVALUE(CreatedDate) + 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Creación 5 dias</label>
    <type>Text</type>
</CustomField>