force-app/main/default/objects/Alerta__c/fields/Fecha_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Creacion__c</fullName>
    <formula>If(LEN(TEXT(DAY(DATEVALUE( CreatedDate )))) = 1 ,&apos;0&apos;+TEXT(DAY(DATEVALUE( CreatedDate )))+&apos;/&apos;,TEXT(DAY(DATEVALUE( CreatedDate )))+&apos;/&apos;)+
If(LEN(TEXT(MONTH(DATEVALUE( CreatedDate )))) = 1 ,&apos;0&apos;+TEXT(MONTH(DATEVALUE( CreatedDate )))+&apos;/&apos;,TEXT(MONTH(DATEVALUE( CreatedDate )))+&apos;/&apos;)+
TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación</label>
    <type>Text</type>
</CustomField>