force-app/main/default/objects/Alerta__c/fields/Hora_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Creacion__c</fullName>
    <formula>IF( LEN(TEXT(Hour(TIMEVALUE(CreatedDate )) + $Setup.Correccion_Hora__c.Horas_Add__c)) == 1, &apos;0&apos; + TEXT(Hour(TIMEVALUE(CreatedDate )) + $Setup.Correccion_Hora__c.Horas_Add__c), TEXT(Hour(TIMEVALUE(CreatedDate )) + $Setup.Correccion_Hora__c.Horas_Add__c)  ) +&apos;:&apos; +IF(LEN(TEXT(Minute(TIMEVALUE(CreatedDate ))))== 1, &apos;0&apos;+TEXT(Minute(TIMEVALUE(CreatedDate ))), TEXT(Minute(TIMEVALUE(CreatedDate ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de Creación</label>
    <type>Text</type>
</CustomField>