force-app/main/default/objects/Alerta__c/fields/Nombre_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Producto__c</fullName>
    <description>Inserta a traves del flow, en caso de que un producto pase a cancelado</description>
    <label>Nombre Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>