force-app/main/default/objects/Alerta__c/fields/Num_Aux_1__c.field-meta.xml
<CustomField>
    <fullName>Num_Aux_1__c</fullName>
    <label>Num Aux 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>