force-app/main/default/objects/Alerta__c/fields/String_Aux_1__c.field-meta.xml
<CustomField>
    <fullName>String_Aux_1__c</fullName>
    <label>String Aux 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>