force-app/main/default/objects/Alerta__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Método de pago rechazado</fullName>
            </value>
            <value>
                <fullName>Caducidad del método de pago</fullName>
            </value>
            <value>
                <fullName>Modificación de datos personales desde la zona privada de la web</fullName>
            </value>
            <value>
                <fullName>Cambio de correo electrónico</fullName>
            </value>
            <value>
                <fullName>Modificación del medio de pago</fullName>
            </value>
            <value>
                <fullName>Baja de cliente</fullName>
            </value>
            <value>
                <fullName>Sospecho de identidad suplantada</fullName>
            </value>
            <value>
                <fullName>Compra por taquilla</fullName>
            </value>
            <value>
                <fullName>Reactivación de la suscripción</fullName>
            </value>
            <value>
                <fullName>Abono de deuda pendiente</fullName>
            </value>
            <value>
                <fullName>Repudio</fullName>
            </value>
            <value>
                <fullName>Baja de suscripcion</fullName>
                <label>Baja de suscripción</label>
            </value>
            <value>
                <fullName>Codigo de verificacion</fullName>
                <label>Código de verificación</label>
            </value>
            <value>
                <fullName>Error contratación suscripción</fullName>
            </value>
            <value>
                <fullName>Contratación activada</fullName>
            </value>
            <value>
                <fullName>Alta de caso</fullName>
            </value>
            <value>
                <fullName>Apertura de incidencia</fullName>
            </value>
            <value>
                <fullName>Solicitud de baja</fullName>
            </value>
            <value>
                <fullName>Baja por deuda adquirida</fullName>
            </value>
            <value>
                <fullName>Verificación de email</fullName>
            </value>
            <value>
                <fullName>Activación de suscripcion</fullName>
                <isActive>false</isActive>
                <label>Activación de suscripcion</label>
            </value>
            <value>
                <fullName>Baja de usuario</fullName>
                <isActive>false</isActive>
                <label>Baja de usuario</label>
            </value>
            <value>
                <fullName>Contratación TVOD</fullName>
                <isActive>false</isActive>
                <label>Contratación TVOD</label>
            </value>
            <value>
                <fullName>Contratación movistar+lite</fullName>
                <isActive>false</isActive>
                <label>Contratación movistar+lite</label>
            </value>
            <value>
                <fullName>Gestión datos económicos</fullName>
                <isActive>false</isActive>
                <label>Gestión datos económicos</label>
            </value>
            <value>
                <fullName>Gestión de contratos</fullName>
                <isActive>false</isActive>
                <label>Gestión de contratos</label>
            </value>
            <value>
                <fullName>Modificación datos usuario</fullName>
                <isActive>false</isActive>
                <label>Modificación datos usuario</label>
            </value>
            <value>
                <fullName>Recuperación de cuenta</fullName>
                <isActive>false</isActive>
                <label>Recuperación de cuenta</label>
            </value>
            <value>
                <fullName>Registros usuarios</fullName>
                <isActive>false</isActive>
                <label>Registros usuarios</label>
            </value>
            <value>
                <fullName>Sospechosa de identidad suplantada</fullName>
                <isActive>false</isActive>
                <label>Sospechosa de identidad suplantada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>