force-app/main/default/objects/Alerta__c/fields/Transacci_n__c.field-meta.xml
<CustomField>
    <fullName>Transacci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transacción</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>