force-app/main/default/objects/Alerta__c/fields/URL_1__c.field-meta.xml
<CustomField>
    <fullName>URL_1__c</fullName>
    <label>URL 1</label>
    <type>Url</type>
</CustomField>