force-app/main/default/objects/Alerta__c/fields/URL_2__c.field-meta.xml
<CustomField>
    <fullName>URL_2__c</fullName>
    <label>URL 2</label>
    <type>Url</type>
</CustomField>