force-app/main/default/objects/Alerta__c/fields/URL_3__c.field-meta.xml
<CustomField>
    <fullName>URL_3__c</fullName>
    <label>URL 3</label>
    <type>Url</type>
</CustomField>