force-app/main/default/objects/Alerta__c/fields/URL_Codigo_de_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>URL_Codigo_de_Verificacion__c</fullName>
    <label>URL Código de Verificación</label>
    <length>254</length>
    <type>Text</type>
</CustomField>