force-app/main/default/objects/Alerta__c/fields/URL_Nueva_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>URL_Nueva_Verificacion__c</fullName>
    <label>URL Nueva Verificación</label>
    <length>254</length>
    <type>Text</type>
</CustomField>